crates/builder/src/parser/snapshots/builder__parser__converter__tests__context_schema.snap
---
source: crates/builder/src/parser/converter.rs
assertion_line: 698
expression: "convert_root(parsed.root_node(),\n        r#\"\n            context AuthUser {\n                id: Int @jwt(\"sub\")\n                roles: Array<String> @jwt\n            }\n        \"#.as_bytes(),\n        file_span, Path::new(\"input.exo\")).unwrap()"
---
types:
  - name: AuthUser
    kind: Context
    fields:
      - name: id
        typ:
          Plain:
            - Int
            - []
            - ~
        annotations:
          - name: jwt
            params:
              Single:
                - StringLiteral:
                    - sub
        default_value: ~
      - name: roles
        typ:
          Plain:
            - Array
            - - Plain:
                  - String
                  - []
                  - ~
            - ~
        annotations:
          - name: jwt
            params: None
        default_value: ~
    annotations: []
services: []
imports: []

